Fix maligned 'date' in navbar

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,5 @@
 .navbar-date {
   color: darkgrey;
+  padding-top: 15px;
+  padding-right: 10px;
 }
